tests/ui/pattern/usefulness/slice_of_empty.min_exhaustive_patterns.stderr
warning: the feature `min_exhaustive_patterns` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/slice_of_empty.rs:3:46
   |
LL | #![cfg_attr(min_exhaustive_patterns, feature(min_exhaustive_patterns))]
   |                                              ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #119612 <https://github.com/rust-lang/rust/issues/119612> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0004]: non-exhaustive patterns: `&[_, ..]` not covered
  --> $DIR/slice_of_empty.rs:11:11
   |
LL |     match nevers {
   |           ^^^^^^ pattern `&[_, ..]` not covered
   |
   = note: the matched value is of type `&[!]`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         &[] => (),
LL ~         &[_, ..] => todo!(),
   |

error[E0004]: non-exhaustive patterns: `&[]` and `&[_, _, ..]` not covered
  --> $DIR/slice_of_empty.rs:22:11
   |
LL |     match nevers {
   |           ^^^^^^ patterns `&[]` and `&[_, _, ..]` not covered
   |
   = note: the matched value is of type `&[!]`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
   |
LL ~         &[_] => (),
LL ~         &[] | &[_, _, ..] => todo!(),
   |

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0004`.
